turtleart.square.Square.scala.error
Compilation error:
Square:8: error: not found: value orward
    orward(steps);
    ^