turtleart.square.Square.scala.code
override def run () {
  square(200.0, 90.0);
}

def square (steps:Double, angle:Double) {
  penDown();
  for (i <- 0 to 3) {
    orward(steps);
  right(angle);
  }
}